tests/files/lexer_tests/should_fail/077.cmdr
//Should not lex string interpolation (not terminated interpolation)
$'{{{}}';